Add dynamic reconfigure for feature tracker

--- a/cfg/fast_param.cfg
+++ b/cfg/fast_param.cfg
@@ -10,7 +10,7 @@ gen.add("PYRAMID_LEVELS",  int_t,   0, "Pyramid level", 6,  1, 6)
 
 # FAST detector parameters
 gen.add("FAST_EPSILON", double_t, 0, "Threshold for feature detection",   60.0, 1.0,   200.0)
-gen.add("FAST_MIN_ARC_LENGTH", int_t, 0, "Threshold for feature detection",   10, 1,   20)
+gen.add("FAST_MIN_ARC_LENGTH", int_t, 0, "Minimum arc length",   10, 1,   20)
 fast_type_enum = gen.enum([ 
 gen.const("SUM_OF_ABS_DIFF_ON_ARC",      int_t, 0, "Sum of absolute differences"),
 gen.const("MAX_THRESHOLD",     int_t, 1, "Maximum threshold value")
