--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,7 @@ include
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME}_node src/vilib_ros_node.cpp)
 add_executable(vilib_ros_tracker src/vilib_ros_tracker.cpp)
+add_executable(img_view src/img_view.cpp)
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
@@ -165,10 +166,12 @@ add_executable(vilib_ros_tracker src/vilib_ros_tracker.cpp)
 ## same as for the library above
 add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} vilib ${PROJECT_NAME}_gencfg)
 add_dependencies(vilib_ros_tracker ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} vilib ${PROJECT_NAME}_gencfg)
+add_dependencies(img_view ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} vilib ${PROJECT_NAME}_gencfg)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} ${OpenCV_LIBS} vilib)
 target_link_libraries(vilib_ros_tracker ${catkin_LIBRARIES} ${OpenCV_LIBS} vilib)
+target_link_libraries(img_view ${catkin_LIBRARIES} ${OpenCV_LIBS} vilib)
 
 #############
 ## Install ##
