Add graphic params

--- a/cfg/tracker_param.cfg
+++ b/cfg/tracker_param.cfg
@@ -17,7 +17,7 @@ gen.add("FEATURE_DETECTOR_MAX_LEVEL",  int_t,   0, "Feature detector max level",
 gen.add("FEATURE_DETECTOR_HORIZONTAL_BORDER",  int_t,   0, "Horizontal feature detector padding", 0,  0, 320)
 gen.add("FEATURE_DETECTOR_VERTICAL_BORDER",  int_t,   0, "Vertical feature detector padding", 8,  0, 320)
 
-# FAST parameters
+# === FAST parameters ===
 gen.add("FEATURE_DETECTOR_FAST_EPISLON", double_t, 0, "Threshold for feature detection",   60.0, 1.0,   200.0)
 gen.add("FEATURE_DETECTOR_FAST_ARC_LENGTH", int_t, 0, "Fast Arc Length",   14, 1,   20)
 fast_type_enum = gen.enum([ 
@@ -26,5 +26,16 @@ gen.const("MAX_THRESHOLD",     int_t, 1, "Maximum threshold value")
 ],"FAST_SCORE Setter")
 gen.add("FEATURE_DETECTOR_FAST_SCORE", int_t, 0, "Select FAST_SCORE method", 0, 0, 1, edit_method=fast_type_enum)
 
+# === Image publisher ===
+groupImgPub = gen.add_group("Image Publisher")
+groupImgPub.add("enable_img_publisher",   bool_t,   0, "Publish image with features",  True)
+
+# === Graphics param ===
+groupGraphics = gen.add_group("Graphics")
+groupGraphics.add("draw_features",   bool_t,   0, "Draw features",  True)
+groupGraphics.add("draw_feature_thickness", int_t, 0, "Feature circle thickness",   2, 1,   5)
+groupGraphics.add("draw_feature_text",   bool_t,   0, "Draw feature number",  True)
+groupGraphics.add("draw_bounding_rectangle",   bool_t,   0, "Draw bounding rectangle",  True)
+groupGraphics.add("draw_bounding_rectangle_thickness", int_t, 0, "Bounding rectangle thickness",   2, 1,   5)
 
 exit(gen.generate(PACKAGE, "vilib_ros", "tracker_param"))
