Add graphics param function

--- a/cfg/tracker_param.cfg
+++ b/cfg/tracker_param.cfg
@@ -5,37 +5,41 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
+grpTrack = gen.add_group("Tracker")
 # Frame preprocessing
-gen.add("FRAME_IMAGE_PYRAMID_LEVELS",  int_t,   0, "Pyramid level (Preprocessing)", 6,  1, 6)
+grpFP = grpTrack.add_group("i_Frame_preprocessing")
+grpFP.add("FRAME_IMAGE_PYRAMID_LEVELS",  int_t,   0, "Image Pyramid level (Preprocessing)", 6,  1, 6)
 # Feature detection options
-gen.add("FEATURE_DETECTOR_CELL_SIZE_WIDTH",  int_t,   0, "Feature detector cell width", 32,  1, 128)
-gen.add("FEATURE_DETECTOR_CELL_SIZE_HEIGHT",  int_t,   0, "Feature detector cell height", 32,  1, 128)
-
-gen.add("FEATURE_DETECTOR_MIN_LEVEL",  int_t,   0, "Feature detector min level", 0,  0, 3)
-gen.add("FEATURE_DETECTOR_MAX_LEVEL",  int_t,   0, "Feature detector max level", 5,  1, 6)
-
-gen.add("FEATURE_DETECTOR_HORIZONTAL_BORDER",  int_t,   0, "Horizontal feature detector padding", 0,  0, 320)
-gen.add("FEATURE_DETECTOR_VERTICAL_BORDER",  int_t,   0, "Vertical feature detector padding", 8,  0, 320)
+grpFD = grpTrack.add_group("ii_Feature_detection")
+grpFD.add("FEATURE_DETECTOR_CELL_SIZE_WIDTH",  int_t,   0, "Feature detector cell width", 32,  1, 128)
+grpFD.add("FEATURE_DETECTOR_CELL_SIZE_HEIGHT",  int_t,   0, "Feature detector cell height", 32,  1, 128)
+grpFD.add("FEATURE_DETECTOR_MIN_LEVEL",  int_t,   0, "Feature detector min level", 0,  0, 3)
+grpFD.add("FEATURE_DETECTOR_MAX_LEVEL",  int_t,   0, "Feature detector max level", 5,  1, 6)
+grpFD.add("FEATURE_DETECTOR_HORIZONTAL_BORDER",  int_t,   0, "Horizontal feature detector padding", 0,  0, 320)
+grpFD.add("FEATURE_DETECTOR_VERTICAL_BORDER",  int_t,   0, "Vertical feature detector padding", 8,  0, 320)
 
 # === FAST parameters ===
-gen.add("FEATURE_DETECTOR_FAST_EPISLON", double_t, 0, "Threshold for feature detection",   60.0, 1.0,   200.0)
-gen.add("FEATURE_DETECTOR_FAST_ARC_LENGTH", int_t, 0, "Fast Arc Length",   14, 1,   20)
+grpFast = grpTrack.add_group("iii_FAST_params")
+grpFast.add("FEATURE_DETECTOR_FAST_EPISLON", double_t, 0, "Threshold for feature detection",   60.0, 1.0,   200.0)
+grpFast.add("FEATURE_DETECTOR_FAST_ARC_LENGTH", int_t, 0, "Fast Arc Length",   14, 1,   20)
 fast_type_enum = gen.enum([ 
 gen.const("SUM_OF_ABS_DIFF_ON_ARC",      int_t, 0, "Sum of absolute differences"),
 gen.const("MAX_THRESHOLD",     int_t, 1, "Maximum threshold value")
 ],"FAST_SCORE Setter")
-gen.add("FEATURE_DETECTOR_FAST_SCORE", int_t, 0, "Select FAST_SCORE method", 0, 0, 1, edit_method=fast_type_enum)
+grpFast.add("FEATURE_DETECTOR_FAST_SCORE", int_t, 0, "Select FAST_SCORE method", 0, 0, 1, edit_method=fast_type_enum)
 
 # === Image publisher ===
-groupImgPub = gen.add_group("Image Publisher")
-groupImgPub.add("enable_img_publisher",   bool_t,   0, "Publish image with features",  True)
+grpImgPub = gen.add_group("Image_publisher")
+grpImgPub.add("publish_img",   bool_t,   0, "Publish image with features",  True)
 
 # === Graphics param ===
-groupGraphics = gen.add_group("Graphics")
-groupGraphics.add("draw_features",   bool_t,   0, "Draw features",  True)
-groupGraphics.add("draw_feature_thickness", int_t, 0, "Feature circle thickness",   2, 1,   5)
-groupGraphics.add("draw_feature_text",   bool_t,   0, "Draw feature number",  True)
-groupGraphics.add("draw_bounding_rectangle",   bool_t,   0, "Draw bounding rectangle",  True)
-groupGraphics.add("draw_bounding_rectangle_thickness", int_t, 0, "Bounding rectangle thickness",   2, 1,   5)
+grpGraphics = gen.add_group("Graphics")
+grpGraphics_F = grpGraphics.add_group("Features")
+grpGraphics_F.add("draw_features",   bool_t,   0, "Draw features",  True)
+grpGraphics_F.add("draw_features_thickness", int_t, 0, "Feature circle thickness",   2, 1,   5)
+grpGraphics_F.add("draw_features_text",   bool_t,   0, "Draw feature point number",  True)
+grpGraphics_R = grpGraphics.add_group("Bounding Rectangle")
+grpGraphics_R.add("draw_bounding_rectangle",   bool_t,   0, "Draw bounding rectangle",  True)
+grpGraphics_R.add("draw_bounding_rectangle_thickness", int_t, 0, "Bounding rectangle thickness",   2, 1,   5)
 
 exit(gen.generate(PACKAGE, "vilib_ros", "tracker_param"))
